--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
-    "babel-jest": "^23.0.0-alpha.0",
+    "babel-jest": "^22.4.3",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-node8": "^1.2.0",
     "eslint": "^4.18.2",
